[package]
name = "api-client"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { version = "1.12.0", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.32"
memchr = "2.8.2"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = { version="1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }

